--- a/ZYSideSlipFilter/Classes/Model/FilterCommonCollectionViewCell.xib
+++ b/ZYSideSlipFilter/Classes/Model/FilterCommonCollectionViewCell.xib
@@ -16,7 +16,7 @@
                 <subviews>
                     <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mlq-8g-sLB">
                         <rect key="frame" x="25" y="-3" width="30" height="26"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="11"/>
                         <state key="normal" title="name">
                             <color key="titleColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.11372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </state>
